kubernetes/charts/argo-cd/patches/istio.yaml
#Gateway
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: argo-cd-gw
  namespace: istio-system
spec:
  servers:
    - hosts:
        - argo-cd.ops.cluster.yanychoi.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        credentialName: argo-cd-tls
        mode: SIMPLE
    - hosts:
        - argo-cd.ops.cluster.yanychoi.com
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    app: istio-ingressgateway
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argo-cd-vs
  namespace: argo-cd
spec:
  hosts:
  - argo-cd.ops.cluster.yanychoi.com
  gateways:
  - istio-system/argo-cd-gw
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: argo-cd-argocd-server
